force-app/main/default/objects/Job_Line_Item__c/Job_Line_Item__c.object-meta.xml
<CustomObject>
    <description>One billable line on a service job - labour, a part, a callout fee or a disposal charge. Master-detail to Service Job so job value rolls up and lines inherit job security.</description>
    <label>Job Line Item</label>
    <nameField>
        <displayFormat>LINE-{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>