force-app/main/default/objects/Job_Line_Item__c/fields/GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether GST applies. Almost always true - the exception is some strata insurance work.</description>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>