force-app/main/default/objects/Job_Line_Item__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>What is being charged. Drives the margin analysis - labour and parts behave very differently.</description>
    <label>Line Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labour</fullName>
                <default>true</default>
                <label>Labour</label>
            </value>
            <value>
                <fullName>Part or Material</fullName>
            </value>
            <value>
                <fullName>Callout Fee</fullName>
            </value>
            <value>
                <fullName>Disposal or Recycling</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>