force-app/main/default/objects/Job_Line_Item__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>Supplier part number for material lines. Blank for labour.</description>
    <label>Part Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>