force-app/main/default/objects/Job_Line_Item__c/fields/Service_Job__c.field-meta.xml
<CustomField>
    <fullName>Service_Job__c</fullName>
    <description>The parent job. Master-detail, not lookup: a line has no meaning without its job, the job value must roll up, and lines should inherit job sharing rather than carry their own.</description>
    <label>Service Job</label>
    <referenceTo>Service_Job__c</referenceTo>
    <relationshipLabel>Job Line Items</relationshipLabel>
    <relationshipName>Job_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>