force-app/main/default/objects/Job_Line_Item__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Where the part came from. Free text in Phase 1; a candidate for its own object if supplier reporting is ever asked for.</description>
    <label>Supplier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>