force-app/main/default/objects/Job_Line_Item__c/listViews/All_Line_Items.listView-meta.xml
<ListView>
    <fullName>All_Line_Items</fullName>
    <columns>NAME</columns>
    <columns>Service_Job__c</columns>
    <columns>Line_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Line_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Line Items</label>
</ListView>